# agents_data_engineering

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
databricks/: README.md
databricks/notebooks/: 01_bronze_autoloader.py  02_silver_transform.py  03_gold_star_schema.sql
databricks/resources/: lakekeeper_job.yml
docs/: architecture.md  data_dictionary.md  databricks_mapping.md
docs/decisions/: 001-local-engine.md  002-llm-on-escalation.md  003-mock-first.md
examples/run_2026-07-01_chaos-high/: console.txt  report.md  run_log.json
src/lakekeeper/: __init__.py  __main__.py  cli.py  config.py
src/lakekeeper/agents/: context.py  decisions.py  graph.py  ingestion_agent.py  llm.py  quality_agent.py  reporting_agent.py  state.py  supervisor.py  tools.py  transform_agent.py  validation_agent.py
src/lakekeeper/datagen/: __init__.py  chaos.py  fx_rates.py  generator.py
src/lakekeeper/pipeline/: bronze.py  gold.py  reconciliation.py  runner.py  silver.py  store.py
src/lakekeeper/pipeline/quality/: engine.py
src/lakekeeper/pipeline/quality/rules/: silver_accounts.yml  silver_customers.yml  silver_transactions.yml
src/lakekeeper/pipeline/sql/: dim_account.sql  dim_customer.sql  dim_date.sql  fact_transactions.sql  kpi_daily.sql
tests/: conftest.py  test_chaos.py  test_datagen.py  test_graph_flow.py  test_live_smoke.py  test_pipeline_e2e.py  test_quality_engine.py  test_scaffold.py  test_store.py
